[project]
name = "snn-tutorial"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "datasets==3.6.0",
  "huggingface-hub[hf-xet]==0.33.2",
  "jupyterlab>=4.4.9",
  "nltk==3.9.1",
  "tqdm==4.67.1",
  "transformers[torch]==4.53.1",
]

[project.optional-dependencies]
cpu = ["torch==2.6.0", "torchaudio==2.6.0", "torchvision==0.21.0"]
cu124 = ["torch==2.6.0", "torchaudio==2.6.0", "torchvision==0.21.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu124" }]]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
